k8n/setup/minio/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: minio.psplabs.org
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  tls:
  - hosts:
    - minio.psplabs.org
  rules:
  - host: minio.psplabs.org
    http:
      paths:
      - path: /
        backend:
          serviceName: minio
          servicePort: http
